[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rfc9420-rag"
version = "0.1.0"
description = "CLI for experimenting with RFC 9420 chunking and retrieval in Postgres."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "mcp[cli]>=1.26.0",
  "openai>=1.76.0",
  "psycopg[binary]>=3.2.6",
  "typer>=0.16.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.5",
]

[project.scripts]
rfc-rag = "rfc_rag.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that require a running Postgres instance with pgvector enabled",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
